RESOLVED FIXED284903
WebTransport needs implementing network process crash behavior
https://bugs.webkit.org/show_bug.cgi?id=284903
Summary WebTransport needs implementing network process crash behavior
ankshit
Reported 2024-12-18 14:35:58 PST
WebTransport sessions should be able to handle network process crash gracefully.
Attachments
ankshit
Comment 1 2024-12-18 15:02:29 PST
ankshit
Comment 2 2024-12-18 15:02:53 PST
EWS
Comment 3 2024-12-19 12:53:29 PST
Committed 288117@main (bda3f50c9da4): <https://commits.webkit.org/288117@main> Reviewed commits have been landed. Closing PR #38163 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.