Tools/TestWebKitAPI/Tests/WebKitCocoa/WebTransport.mm
@@ -32,9 +32,11 @@
 #import "Test.h"
 #import "TestNavigationDelegate.h"
 #import "TestUIDelegate.h"
+#import "TestWKWebView.h"
 #import "Utilities.h"
 #import "WebTransportServer.h"
 #import <WebKit/WKPreferencesPrivate.h>
+#import <WebKit/WKWebsiteDataStorePrivate.h>
 #import <WebKit/_WKInternalDebugFeature.h>
 
 namespace TestWebKitAPI {
@@ -230,6 +232,179 @@ TEST(WebTransport, DISABLED_ServerBidirectional)
     [webView loadHTMLString:html baseURL:[NSURL URLWithString:@"https://webkit.org/"]];
     EXPECT_WK_STREQ([webView _test_waitForAlert], "successfully read abc");
     EXPECT_TRUE(challenged);
+}
+
+// FIXME: Fix WebTransportServer constructor and re-enable these tests once rdar://141009498 is available in OS builds.
+TEST(WebTransport, DISABLED_NetworkProcessCrash)
+{
+    WebTransportServer echoServer([](ConnectionGroup group) -> Task {
+        auto datagramConnection = group.createWebTransportConnection(ConnectionGroup::ConnectionType::Datagram);
+        co_await datagramConnection.awaitableSend(@"abc");
+        auto bidiConnection = group.createWebTransportConnection(ConnectionGroup::ConnectionType::Bidirectional);
+        co_await bidiConnection.awaitableSend(@"abc");
+        auto uniConnection = group.createWebTransportConnection(ConnectionGroup::ConnectionType::Unidirectional);
+        co_await uniConnection.awaitableSend(@"abc");
+    });
+
+    auto configuration = adoptNS([WKWebViewConfiguration new]);
+    enableWebTransport(configuration.get());
+    auto webView = adoptNS([[WKWebView alloc] initWithFrame:CGRectZero configuration:configuration.get()]);
+    auto delegate = adoptNS([TestNavigationDelegate new]);
+    [webView setNavigationDelegate:delegate.get()];
+    __block bool challenged { false };
+    __block uint16_t port = echoServer.port();
+    delegate.get().didReceiveAuthenticationChallenge = ^(WKWebView *, NSURLAuthenticationChallenge *challenge, void (^completionHandler)(NSURLSessionAuthChallengeDisposition, NSURLCredential *)) {
+        validateChallenge(challenge, port);
+        challenged = true;
+        completionHandler(NSURLSessionAuthChallengeUseCredential, [NSURLCredential credentialForTrust:challenge.protectionSpace.serverTrust]);
+    };
+
+    NSString *html = [NSString stringWithFormat:@""
+        "<script>"
+        "let session = new WebTransport('https://127.0.0.1:%d/');"
+        "let bidiStream = null;"
+        "let uniStream = null;"
+        "let incomingBidiStream = null;"
+        "let incomingUniStream = null;"
+        "let data = new TextEncoder().encode('abc');"
+        "async function setupSession() {"
+        "  try {"
+        "    await session.ready;"
+        "    bidiStream = await session.createBidirectionalStream();"
+        "    uniStream = await session.createUnidirectionalStream();"
+        "    incomingBidiStream = await getIncomingBidiStream();"
+        "    incomingUniStream = await getIncomingUniStream();"
+        "    alert('successfully established');"
+        "  } catch (e) { alert('caught ' + e); }"
+        "}; setupSession();"
+        "async function getIncomingBidiStream() {"
+        "  let reader = session.incomingBidirectionalStreams.getReader();"
+        "  let {value: s, d} = await reader.read();"
+        "  reader.releaseLock();"
+        "  return s;"
+        "};"
+        "async function getIncomingUniStream() {"
+        "  let reader = session.incomingUnidirectionalStreams.getReader();"
+        "  let {value: s, d} = await reader.read();"
+        "  reader.releaseLock();"
+        "  return s;"
+        "};"
+        "async function readFromBidiStream() {"
+        "  let reader = bidiStream.readable.getReader();"
+        "  let {value: c, d} = await reader.read();"
+        "  reader.releaseLock();"
+        "  return c;"
+        "};"
+        "async function readFromIncomingBidiStream() {"
+        "  let reader = incomingBidiStream.readable.getReader();"
+        "  let {value: c, d} = await reader.read();"
+        "  reader.releaseLock();"
+        "  return c;"
+        "};"
+        "async function readFromIncomingUniStream() {"
+        "  let reader = incomingUniStream.getReader();"
+        "  let {value: c, d} = await reader.read();"
+        "  reader.releaseLock();"
+        "  return c;"
+        "};"
+        "async function readDatagram() {"
+        "  let reader = session.datagrams.readable.getReader();"
+        "  let {value: c, d} = await reader.read();"
+        "  reader.releaseLock();"
+        "  return c;"
+        "};"
+        "async function writeOnBidiStream() {"
+        "  let writer = bidiStream.writable.getWriter();"
+        "  await writer.write(data);"
+        "  writer.releaseLock();"
+        "  return;"
+        "};"
+        "async function writeOnUniStream() {"
+        "  let writer = uniStream.getWriter();"
+        "  await writer.write(data);"
+        "  writer.releaseLock();"
+        "  return;"
+        "};"
+        "async function writeOnIncomingBidiStream() {"
+        "  let writer = incomingBidiStream.writable.getWriter();"
+        "  await writer.write(data);"
+        "  writer.releaseLock();"
+        "  return;"
+        "};"
+        "async function writeDatagram() {"
+        "  let writer = session.datagrams.writable.getWriter();"
+        "  await writer.write(data);"
+        "  writer.releaseLock();"
+        "  return;"
+        "};"
+        "</script>",
+        port];
+    [webView loadHTMLString:html baseURL:[NSURL URLWithString:@"https://webkit.org/"]];
+    EXPECT_WK_STREQ([webView _test_waitForAlert], "successfully established");
+    EXPECT_TRUE(challenged);
+
+    pid_t networkProcessIdentifier = [configuration.get().websiteDataStore _networkProcessIdentifier];
+
+    kill(networkProcessIdentifier, SIGKILL);
+
+    NSError *error = nil;
+
+    id obj = [webView objectByCallingAsyncFunction:@"return await session.createBidirectionalStream()" withArguments:@{ } error:&error];
+    EXPECT_EQ(obj, nil);
+    EXPECT_NOT_NULL(error);
+    error = nil;
+
+    obj = [webView objectByCallingAsyncFunction:@"return await session.createUnidirectionalStream()" withArguments:@{ } error:&error];
+    EXPECT_EQ(obj, nil);
+    EXPECT_NOT_NULL(error);
+    error = nil;
+
+    obj = [webView objectByCallingAsyncFunction:@"return await getIncomingBidiStream()" withArguments:@{ } error:&error];
+    EXPECT_EQ(obj, nil);
+    EXPECT_NULL(error);
+
+    obj = [webView objectByCallingAsyncFunction:@"return await getIncomingUniStream()" withArguments:@{ } error:&error];
+    EXPECT_EQ(obj, nil);
+    EXPECT_NULL(error);
+
+    obj = [webView objectByCallingAsyncFunction:@"return await readFromBidiStream()" withArguments:@{ } error:&error];
+    EXPECT_EQ(obj, nil);
+    EXPECT_NULL(error);
+
+    obj = [webView objectByCallingAsyncFunction:@"return await readFromIncomingBidiStream()" withArguments:@{ } error:&error];
+    EXPECT_EQ(obj, nil);
+    EXPECT_NULL(error);
+
+    obj = [webView objectByCallingAsyncFunction:@"return await readFromIncomingUniStream()" withArguments:@{ } error:&error];
+    EXPECT_EQ(obj, nil);
+    EXPECT_NULL(error);
+
+    obj = [webView objectByCallingAsyncFunction:@"return await readDatagram()" withArguments:@{ } error:&error];
+    EXPECT_EQ(obj, nil);
+    EXPECT_NULL(error);
+
+    obj = [webView objectByCallingAsyncFunction:@"return await writeOnBidiStream()" withArguments:@{ } error:&error];
+    EXPECT_EQ(obj, nil);
+    EXPECT_NOT_NULL(error);
+    error = nil;
+
+    obj = [webView objectByCallingAsyncFunction:@"return await writeOnUniStream()" withArguments:@{ } error:&error];
+    EXPECT_EQ(obj, nil);
+    EXPECT_NOT_NULL(error);
+    error = nil;
+
+    obj = [webView objectByCallingAsyncFunction:@"return await writeOnIncomingBidiStream()" withArguments:@{ } error:&error];
+    EXPECT_EQ(obj, nil);
+    EXPECT_NOT_NULL(error);
+    error = nil;
+
+    obj = [webView objectByCallingAsyncFunction:@"return await writeDatagram()" withArguments:@{ } error:&error];
+    EXPECT_EQ(obj, nil);
+    EXPECT_NOT_NULL(error);
+    error = nil;
+
+    obj = [webView objectByEvaluatingJavaScript:@"session.close()"];
+    EXPECT_EQ(obj, nil);
 }
 } // namespace TestWebKitAPI
 
